cs-verify-code
